Definir las capas para el modelo AlexNet

--- a/[NRC_6278] WilmerSolanoEstudiante_Lab1.ipynb
+++ b/[NRC_6278] WilmerSolanoEstudiante_Lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da0c672c",
+   "id": "ee3d1d91",
    "metadata": {},
    "source": [
     "Presentado por: Mercy Arrobo - Solano Wilmer\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e224db3f",
+   "id": "a75b92cf",
    "metadata": {},
    "source": [
     "# Importación de librerias necesarias"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4e21cdf8",
+   "id": "164d10c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e0ba668",
+   "id": "ff809d89",
    "metadata": {},
    "source": [
     "# Cargar el Dataset"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9b1788aa",
+   "id": "5ddaf899",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06dffe02",
+   "id": "2b0bbfa2",
    "metadata": {},
    "source": [
     "# Explique el problema a resolver"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2eb2069",
+   "id": "e8456dbe",
    "metadata": {},
    "source": [
     "Se desea desarrollar un modelo de IA basado en AlexNet, con el fin de identificar a un usuario usando un dataset de imagenes. Los usuarios serán los compañeros de clase, para este caso solo se va a trabajar con 5 de ellos. Con el respectivo procesamiento, el modelo deberá predecir con una imágen a qué compañero se hace referencia. "
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d00b19",
+   "id": "3910eb85",
    "metadata": {},
    "source": [
     "# Características del dataset"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196c2275",
+   "id": "3a365064",
    "metadata": {},
    "source": [
     "El dataset que se encuentra en el directorio mencionado se encuentran carpetas de cada estudiante en la cual contiene sus fotos. Las características que se pueden identificar al dataset son:\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25946771",
+   "id": "1b7d0a5f",
    "metadata": {},
    "source": [
     "# Procesamiento de imagenes"
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1c4e578b",
+   "id": "f8dafcef",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b10dd78",
+   "id": "42a315d3",
    "metadata": {},
    "source": [
     "# Evaluación del Modelo"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "654b2f3c",
+   "id": "547befb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22542b2",
+   "id": "7c6cdeb2",
    "metadata": {},
    "source": [
     "# Arrobo Mercy"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6bde1643",
+   "id": "69857aa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb49285b",
+   "id": "b0115ca2",
    "metadata": {},
    "source": [
     "# Leonardo Borja"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "173c5cbc",
+   "id": "397aa7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81fd86c",
+   "id": "1b1abc0f",
    "metadata": {},
    "source": [
     "# Paute Kevin"
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2d4573c7",
+   "id": "f94e1156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e6d48a4",
+   "id": "46a70358",
    "metadata": {},
    "source": [
     "# RivasSelena"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "75d1c0df",
+   "id": "0d824903",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5159506",
+   "id": "ac9430b4",
    "metadata": {},
    "source": [
     "# Solano Wilmer"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0876c27c",
+   "id": "438e5df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02faca07",
+   "id": "3682f4fd",
    "metadata": {},
    "source": [
     "# Filtro NLM para eliminación de ruido de imágenes"
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5cd50f0f",
+   "id": "5e483180",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3fb4a49f",
+   "id": "0f079e3f",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c30339e",
+   "id": "edc447fe",
    "metadata": {},
    "source": [
     "# Eliminación de fondo"
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "41483c3c",
+   "id": "4b39fccb",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "07598d0e",
+   "id": "64751ad4",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76e19ed",
+   "id": "83a40387",
    "metadata": {},
    "source": [
     "# Carga y exploración de datos"
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c461af82",
+   "id": "999433a5",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fa41c991",
+   "id": "c11c03ea",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6c6e01f4",
+   "id": "fecd6f04",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "880f928e",
+   "id": "2301aac9",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00d8f4b0",
+   "id": "7c79869d",
    "metadata": {},
    "source": [
     "# Preparar datos para entrenar el modelo CNN"
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "977dfc1d",
+   "id": "643ea565",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a53a6d6b",
+   "id": "85590d62",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c07398bc",
+   "id": "29a6969b",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "58f54a3c",
+   "id": "ce2585fa",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b638cf8",
+   "id": "9aa5b501",
    "metadata": {},
    "source": [
     "# División del dataset en datos de entrenamiento y datos de test"
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "883e7682",
+   "id": "770faf13",
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "36ede14a",
+   "id": "d1d787ab",
    "metadata": {},
    "outputs": [
     {
@@ -1110,12 +1110,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1241db03",
+   "metadata": {},
+   "source": [
+    "# Definir el modelo CNN de AlexNet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b8fca0",
+   "id": "7540142a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Definir todas las capas del modelo de AlexNet\"\"\"\n",
+    "model=Sequential()\n",
+    "\n",
+    "#1 capa de conversión\n",
+    "model.add(Conv2D(filters=96,kernel_size=(11,11),strides=(4,4),padding=\"valid\",activation=\"relu\",input_shape=(227,227,3)))\n",
+    "\n",
+    "#1 capa máxima de la piscina\n",
+    "model.add(MaxPooling2D(pool_size=(3,3),strides=(2,2)))\n",
+    "\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
+    "#2 capa de conversión\n",
+    "model.add(Conv2D(filters=256,kernel_size=(5,5),strides=(1,1),padding=\"valid\",activation=\"relu\"))\n",
+    "\n",
+    "#2 capa máxima de la piscina\n",
+    "model.add(MaxPooling2D(pool_size=(3,3),strides=(2,2)))\n",
+    "\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
+    "#3 capa de conversión\n",
+    "model.add(Conv2D(filters=384,kernel_size=(3,3),strides=(1,1),padding=\"valid\",activation=\"relu\"))\n",
+    "\n",
+    "#4 conv layer\n",
+    "model.add(Conv2D(filters=384,kernel_size=(3,3),strides=(1,1),padding=\"valid\",activation=\"relu\"))\n",
+    "\n",
+    "#5 capa de conversión\n",
+    "model.add(Conv2D(filters=256,kernel_size=(3,3),strides=(1,1),padding=\"valid\",activation=\"relu\"))\n",
+    "\n",
+    "#3 capa máxima de la piscina\n",
+    "model.add(MaxPooling2D(pool_size=(3,3),strides=(2,2)))\n",
+    "\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "#1 dense layer\n",
+    "model.add(Dense(4096,input_shape=(227,227,3),activation=\"relu\"))\n",
+    "\n",
+    "model.add(Dropout(0.4))\n",
+    "\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
+    "#2 dense layer\n",
+    "model.add(Dense(4096,activation=\"relu\"))\n",
+    "\n",
+    "model.add(Dropout(0.4))\n",
+    "\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
+    "#3 dense layer\n",
+    "model.add(Dense(1000,activation=\"relu\"))\n",
+    "\n",
+    "model.add(Dropout(0.4))\n",
+    "\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
+    "#output layer\n",
+    "model.add(Dense(20,activation=\"softmax\"))\n",
+    "\n",
+    "model.summary()"
+   ]
   }
  ],
  "metadata": {
